# scout-nova-integration

./: .bedrock_agentcore.yaml.example  .gitignore  AgentCore_Deployment.md  COMPARISON.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  PROJECT_STATUS.md  README.md  TESTING_COMPARISON.md  build_logs.json
.cursor/rules/: agentcore_deployment.mdc  strands_sdk.mdc
Endpoints/InvokeAgentLambda/: template.yml
Endpoints/InvokeAgentLambda/src/: lambda_function.py
Endpoints/InvokeWebSocketAgentLambda/: template.yml  testingstreaming.html
Endpoints/InvokeWebSocketAgentLambda/src/: config.py  lambda_function.py
Endpoints/SessionManagerLambda/: template.yml
Endpoints/SessionManagerLambda/src/: config.py  lambda_function.py
ScoutAgent/: .gitignore  README.md  kwikie_agent.py  pyproject.toml
Tools/HydraQueryLambda/: template.yml
Tools/HydraQueryLambda/src/: config.py  lambda_function.py
Tools/SnowflakeQueryAsyncLambda/: template.yml
Tools/SnowflakeQueryAsyncLambda/src/: lambda_function.py
Tools/SnowflakeQueryParallelLambda/: template.yml
Tools/SnowflakeQueryParallelLambda/src/: lambda_function.py
agent/: bidi_websocket_server.py  debug_tools.py  env.example  gateway_client.py  pyproject.toml  scout_config.py  scout_voice_agent.py  test_nova_basic.py  test_nova_with_tools.py  voice_server.py
direct-bedrock/: README.md  __init__.py  pyproject.toml  scout_config.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: VoiceAgent.js
frontend/src/components/: EventDisplay.js
frontend/src/helper/: audioPlayer.js  audioPlayerProcessor.worklet.js  bidiEvents.js
strands-bidi/: DEPLOYMENT.md  README.md  cli_test_agent.py  client.html  client.py  config.example.py  env.example  gateway-policy.json  gateway_client.py  pyproject.toml  scout_config.py  scout_nova_agent.py  server.py  test_agent.py  trust-policy.json  websocket_helpers.py
(+12 files in other folders)
