[project]
name = "scout-voice-agent-agentcore"
version = "1.0.0"
description = "Scout voice agent using Strands BidiAgent with Nova Sonic for AgentCore Runtime deployment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "strands-agents>=1.19.0",
    "strands-agents-tools>=0.2.0",
    "mcp>=1.0.0",
    "httpx-auth-awssigv4>=0.1.0",
    "boto3>=1.41.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "bedrock-agentcore>=1.0.0",
    "aws-opentelemetry-distro==0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py", "*.html"]
